--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,23 +1,4 @@
 spring.application.name=inventory-service
+spring.config.import=configserver:http://localhost:8888
 
 
-server.servlet.context-path=/inventory
-server.port=9010
-
-#DbConfigurations
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=6342
-spring.jpa.hibernate.ddl-auto=create-drop
-
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format-sql=true
-
-
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:data.sql
-
-#eureka config
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
