--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,25 +1,2 @@
 spring.application.name=order-service
-
-server.servlet.context-path=/orders
-server.port=9020
-
-#DbConfigurations
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=6342
-spring.jpa.hibernate.ddl-auto=create-drop
-
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format-sql=true
-
-
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:data.sql
-
-
-
-
-#eureka config
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import=configserver:http://localhost:8888
